syntax = "proto3";

package todoPackage;

service Todo {
    rpc createTodo (TodoItem) returns (TodoItem);
    rpc readTodos (Void) returns (TodoItems);
    rpc readTodoStream (Void) returns (stream TodoItem);
}

message Void {}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}
